--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,13 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
 
-/* Variables */
-:root {
+/* light theme Variables */
+body[data-theme="light"] {
   --font-family: "Roboto", sans-serf;
   --normal-font: 400;
   --bold-font: 700;
   --bolder-font: 900;
   --bg-color: #fcfcfc;
   --primary-color: #4756df;
+  --contact-color: #4756df;
   --secondary-color: #ff7235;
   --primary-shadow: #8b8eaf;
   --secondary-shadow: #a17a69;
@@ -15,6 +16,27 @@
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
   --transition: 0.3s;
+  --switcher-white: aliceblue;
+  --switcher-black: #4756df;
+}
+/* dark theme Variables */
+body[data-theme="dark"] {
+  --font-family: "Roboto", sans-serf;
+  --normal-font: 400;
+  --bold-font: 700;
+  --bolder-font: 900;
+  --bg-color: #1E1F26;
+  --primary-color: white;
+  --contact-color: black;
+  --secondary-color: #8d310a;
+  --primary-shadow: #787a88;
+  --secondary-shadow: #52504f;
+  --bottom-margin: 0.5rem;
+  --bottom-margin-2: 1rem;
+  --line-height: 1.7rem;
+  --transition: 0.3s;
+  --switcher-white: aliceblue;
+  --switcher-black: black;
 }
 /* Variables end */
 
@@ -47,10 +69,12 @@ body {
   font-family: var(--font-family);
 }
 
+/*
 section {
-  /* max-width: 1100px;
-  margin: auto; */
+  max-width: 1100px;
+  margin: auto;
 }
+*/
 
 /* CSS Resets end */
 
@@ -235,7 +259,7 @@ nav ul li {
 .contact-form-container label {
   line-height: 2.7em;
   font-weight: var(--bold-font);
-  color: var(--primary-color);
+  color: var(--contact-color);
 }
 
 .contact-form-container textarea {
@@ -249,22 +273,22 @@ nav ul li {
   padding-bottom: 10px;
   border-radius: 5px;
   border: none;
-  border: 2px outset var(--primary-color);
+  border: 2px outset var(--contact-color);
   font-size: 0.875rem;
   outline: none;
 }
 
 .input-field::placeholder {
   padding: 0.5rem;
-  color: var(--primary-color);
+  color: var(--contact-color);
 }
 
 .submit-btn {
   width: 100%;
   padding: 10px;
   margin: 10px 0;
-  background-color: #fff;
-  border: 2px solid var(--primary-color);
+  background-color: var(--bg-color);
+  border: 2px solid var(--contact-color);
   border-radius: 5px;
   font-size: 1rem;
   font-weight: var(--bold-font);
@@ -272,8 +296,8 @@ nav ul li {
 }
 
 .submit-btn:hover {
-  background-color: var(--primary-color);
-  border: 2px solid var(--primary-color);
+  background-color: var(--contact-color);
+  border: 2px solid var(--contact-color);
   cursor: pointer;
 }
 /* Contacts section ends */
@@ -307,6 +331,55 @@ nav ul li {
 }
 /* Scroll to top button ends */
 
+/* Theme switcher */
+.theme-switcher{
+  right: 30px;
+  top: 10px;
+}
+
+#switcher{
+  width: 0;
+  height: 0;
+  visibility: hidden;
+}
+
+#switcher-label{
+  display: block;
+  text-indent: -9999px;
+  height: 30px;
+  width: 60px;
+  background-color: var(--switcher-white);
+  border-radius: 50px;
+  position: relative;
+  cursor: pointer;
+  transition: .5s ease background-color;
+}
+
+#switcher-label::after{
+  position: absolute;
+  content: '';
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+  background-color: var(--switcher-black);
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  transition: .5s ease;
+}
+
+input::checked + label{
+  background-color: var(--switcher-black);
+  border: 2px solid var(--switcher-white);
+}
+
+input::checked + label::after{
+  background-color: var(--switcher-white);
+  left: calc(100% - 25px);
+}
+
+/* Theme switcher ends */
+
 /* Footer section */
 footer {
   background-color: var(--bg-color);
@@ -318,7 +391,7 @@ footer {
 
 /* General (utilities) */
 .icon-card {
-  background-color: #fff;
+  background-color: var(--bg-color);
   border-radius: 11px;
   box-shadow: 0 3px 10px var(--secondary-shadow);
   padding: 20px;
@@ -326,7 +399,7 @@ footer {
 }
 
 .project-card {
-  background-color: #fff;
+  background-color: var(--bg-color);
   border-radius: 11px;
   box-shadow: 0 3px 10px var(--primary-shadow);
   padding: 20px;
